RESOLVED FIXED61695
Denying access to your keychain on login crashes WebKit2
https://bugs.webkit.org/show_bug.cgi?id=61695
Summary Denying access to your keychain on login crashes WebKit2
Simon Fraser (smfr)
Reported 2011-05-28 16:05:36 PDT
Denying access to your keychain on login crashes WebKit2
Attachments
Patch (5.44 KB, patch)
2011-05-28 16:14 PDT, Simon Fraser (smfr)
mitz: review+
Simon Fraser (smfr)
Comment 1 2011-05-28 16:14:43 PDT
Simon Fraser (smfr)
Comment 2 2011-05-28 16:15:19 PDT
mitz
Comment 3 2011-05-28 16:17:46 PDT
Comment on attachment 95276 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=95276&action=review > Source/WebKit2/ChangeLog:21 > + to avoid uninitialized data members, and initialize length and ouData Typo: ouData
Simon Fraser (smfr)
Comment 4 2011-05-28 16:45:54 PDT
Note You need to log in before you can comment on or make changes to this bug.